feat: Add initial data population command and custom managers
- Implemented a management command `initd` to populate the database with fake data.
- Created custom managers and querysets: `GetOrNoneManager`, `GetOrNoneQuerySet`, `IsDeletedManager`, and `IsDeletedQuerySet` for enhanced data retrieval and soft deletion functionality.
- Updated profile model migration to replace `photo` field with `avatar` field.
- Altered project model migration to modify `featured_image` field.
- Configured Docker Compose for development environment with PostgreSQL and web service.
- Added entrypoint script for initializing the application, applying migrations, and collecting static files.
- Created fixture data for project tags.
- Developed a script to update profiles and retrieve image paths from a specified directory.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ EMAIL_USE_SSL=
 DEFAULT_FROM_EMAIL=
 SETTINGS=
 FRONTEND_URL_DEV=
+SUPERUSER_EMAIL=
+SUPERUSER_PASSWORD=
+MODERATOR_EMAIL=
+MODERATOR_PASSWORD=
