--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,25 @@
 __pycache__
 *.pyc
 *.pyo
-.git
-env
-.venv
 .idea
+**/.git
+**/.gitignore
+**/.vscode
+**/coverage
+**/.env
+**/.aws
+**/.ssh
+Dockerfile
+Dockerfile.dev
 README.md
-.gitignore
-fixtures
-.vscode
-commands.txt
+docker-compose.yml
+docker-compose.dev.yml
+**/.DS_Store
+**/venv
+**/env
+logs
+celerybeat-schedule.bak
+celerybeat-schedule.dat
+celerybeat-schedule.dir
+cert.crt
+cert.key
