--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ ENV PYTHONUNBUFFERED=1
 
 # Install minimal system dependencies needed to build packages
 RUN apt-get update && \
-    apt-get install -y gcc libpq-dev netcat && \
+    apt-get install -y gcc libpq-dev netcat-openbsd && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -33,7 +33,7 @@ ENV PYTHONUNBUFFERED=1
 
 # Install only runtime system dependencies
 RUN apt-get update && \
-    apt-get install -y libpq5 netcat && \
+    apt-get install -y libpq5 netcat-openbsd && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
